Fix checkbox tick alignment

--- a/assets/packages/template-core/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css
+++ b/assets/packages/template-core/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css
@@ -68,6 +68,7 @@
 .checkbox-item input[type="radio"]:checked + label::after {
   font-family: "FontAwesome";
   content: "\f00c";
+  padding: 0 0 13px 0;
 }
 .checkbox-item input[type="checkbox"]:indeterminate + label::after,
 .checkbox-item input[type="radio"]:indeterminate + label::after {
